fix handouts having a weird margin on mobile

--- a/resource/decker/support/plugins/handout/handout.css
+++ b/resource/decker/support/plugins/handout/handout.css
@@ -1,8 +1,4 @@
 html.handout #handout-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   margin: auto;
   overflow: auto;
   touch-action: pan-x pan-y pinch-zoom;
@@ -18,6 +14,10 @@ html.handout .reveal .slides {
   display: block;
   width: var(--slide-width);
   transform: scale(var(--scale-factor));
+  transform-origin: top center;
+  translate: -50% 0;
+  left: 50%;
+  margin: 0;
 }
 
 html.handout .reveal .slides section {
